--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 26 11:33:24 CET 2015
-sdk.dir=/Users/bertrandleclercq/Documents/android-sdk-macosx
+#Fri Oct 21 10:04:46 GMT+01:00 2016
+sdk.dir=C\:\\Users\\Administrateur\\AppData\\Local\\Android\\Sdk
